<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/part_fields"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_text_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="60dp"
        android:hint="@string/qty"
        android:inputType="number"
        android:textSize="28sp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="60dp"
        android:hint="@string/number"
        android:inputType="number"
        android:textSize="28sp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="180dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textSize="28sp"
        android:importantForAutofill="no" />

</LinearLayout>