<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8f8888"
    tools:context="com.pmchecklist.activity.MainActivity">

    <LinearLayout
        android:id="@+id/electricLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="100dp"
            android:text="@string/electric"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:onClick="goToElectricChecklist"
            android:text="@string/open_checklist"
            android:textSize="18sp"
            app:backgroundTint="#336666" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/combustionLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/electricLinearLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/combustion"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:onClick="goToCombustionChecklist"
            android:text="@string/open_checklist"
            android:textSize="18sp"
            app:backgroundTint="#336666" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileBrowserLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/combustionLinearLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generated_documents"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:onClick="openGeneratedDocumentsFolder"
            android:text="@string/open_folder"
            android:textSize="18sp"
            app:backgroundTint="#336666" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>